🙋<200d>♂️ DOWNLOAD: Spectre.Console

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -23,4 +23,7 @@
     <Folder Include="Exceptions\" />
     <Folder Include="Views\Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.44.0" />
+  </ItemGroup>
 </Project>
