👀 IDE: automatic configuration

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -26,4 +26,7 @@
   <ItemGroup>
     <PackageReference Include="Spectre.Console" Version="0.44.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" />
+  </ItemGroup>
 </Project>
